--- a/app/views/testpats/_form.html.erb
+++ b/app/views/testpats/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@patient) do |f| %>
-  <% if @patient.errors.any? %>
+<%= form_for(@testpat) do |f| %>
+  <% if @testpat.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@patient.errors.count, "error") %> prohibited this patient from being saved:</h2>
+      <h2><%= pluralize(@testpat.errors.count, "error") %> prohibited this testpat from being saved:</h2>
 
       <ul>
-      <% @patient.errors.full_messages.each do |msg| %>
+      <% @testpat.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
