Add col1 and text

--- a/app/views/testpats/index.html.erb
+++ b/app/views/testpats/index.html.erb
@@ -30,4 +30,4 @@
 
 <%= link_to 'New Testpat', new_testpat_path %>
 <p> First change no db </p>
-<p> Adding col1 </p>
+<p> Adding col1 and text </p>
